headlamp/dashboard-reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: envoy-dashboard-reference-grant
  namespace: k8s-dashboard
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: envoy-gw
  to:
    - group: ""
      kind: Service
      name: kubernetes-dashboard
