headlamp/headlamp-reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: envoy-headlamp-reference-grant
  namespace: headlamp
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: envoy-gw
  to:
    - group: ""
      kind: Service
      name: headlamp
